package net.dskim.desingpattern.factorymethod;

public class Rectangle implements Shape {
	@Override
	public String draw() {
		return "draw Rectangle";
	}
}
