package net.dskim.desingpattern.factorymethod;

public class Circle implements Shape {
	@Override
	public String draw() {
		return "draw Circle";
	}
}
