package net.dskim.desingpattern.factorymethod;

public class Square implements Shape {
	@Override
	public String draw() {
		return "draw Square";
	}
}
