package net.dskim.desingpattern.facade;

public interface Shape {
	String draw();
}