@startuml Adapter 패턴(김동석)

hide empty members
hide empty methods

title Facade 패턴(김동석)
header https://github.com/bluedskim/javaDesignPatterns
footer 작성시각 %date("yyyy.MM.dd' 'HH:mm")


interface Shape {
	String draw()
}

class Circle {
	String draw()
}

class Rectangle {
	String draw()
}

class Square {
	String draw()
}

class ShapeMaker {
	String drawAllShape()
}

class ShapeMakerTest {
	void ShapeMakerFacadeTest()
}

Shape <|.. Circle
Shape <|.. Rectangle
Shape <|.. Square

ShapeMaker --> Shape

ShapeMakerTest --> ShapeMaker

@enduml